set up div to store data results

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Code Test - Beyond</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-<h1>Working</h1>
+ <main id="main"></main>
   </body>
-  <script src="./js/app.js" charset="utf-8"></script>
+  <script src="js/app.js" charset="utf-8"></script>
 </html>
