--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <main id="main"></main>
+  <footer>Hello</footer>
 </body>
 <script src="js/app.js" charset="utf-8"></script>
 </html>
