--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
   <title>Code Test - Beyond</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/css/style.css">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet"> -->
+  <link href="https://fonts.googleapis.com/css?family=Spinnaker" rel="stylesheet">
 </head>
 <body>
   <main id="main"></main>
