--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
 </head>
 <body>
+  <h1>My Youtube Playlist</h1>
   <main id="main"></main>
   <script src="public/js/app.js" charset="utf-8"></script>
 </body>
