--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Code Test - Beyond</title>
-  <link rel="stylesheet" href="public/css/style.css">
+  <link rel="stylesheet" href="https://evening-meadow-91717.herokuapp.com/public/css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
 </head>
 <body>
