moving script tag outside of body

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Code Test - Beyond</title>
-  <link rel="stylesheet" href="https://evening-meadow-91717.herokuapp.com/public/css/style.css">
+  <link rel="stylesheet" href="./public/css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
 </head>
 <body>
   <h1>My Youtube Playlist</h1>
   <main id="main"></main>
-  <script src="public/js/app.js" charset="utf-8"></script>
 </body>
+<script src="public/js/app.js" charset="utf-8"></script>
 </html>
