--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Code Test - Beyond</title>
-  <link rel="stylesheet" href="./public/css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+  <link rel="stylesheet" href="./public/css/style.css">
 </head>
 <body>
-  <h1>My Youtube Playlist</h1>
-  <main id="main"></main>
+  <header class="header">
+    <h1 class="header__heading">My Youtube Playlist</h1>
+  </header>
+  <main></main>
 </body>
-<script src="public/js/app.js" charset="utf-8"></script>
+<script src="./public/js/app.js" charset="utf-8"></script>
 </html>
