added async to script

--- a/index.html
+++ b/index.html
@@ -13,5 +13,5 @@
   </header>
   <main></main>
 </body>
-<script src="./public/js/app.js?modified=20012009" charset="utf-8"></script>
+<script async src="./public/js/app.js?modified=20012009" charset="utf-8"></script>
 </html>
