--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Code Test - Beyond</title>
-  <link rel="stylesheet" href="./public/css/style.css?modified=20012009">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+  <link rel="stylesheet" href="./public/css/style.css?modified=20012009" media="none" onload="if(media!='all')media='all'">
 </head>
 <body>
   <header class="header">
