--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Code Test - Beyond</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
-  <link rel="stylesheet" href="./public/css/style.css?modified=20012009" media="none" onload="if(media!='all')media='all'">
+  <link rel="stylesheet" href="./public/css/style.css?modified=20012009">
 </head>
 <body>
   <header class="header">
@@ -13,5 +13,5 @@
   </header>
   <main></main>
 </body>
-<script async src="./public/js/app.js?modified=20012009" charset="utf-8"></script>
+<script src="./public/js/app.js?modified=20012009" charset="utf-8"></script>
 </html>
