some styling changes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header class="header">
-    <h1 class="header__heading">My Youtube Playlist</h1>
+    <h1 class="header__heading">My YouTube Playlist</h1>
   </header>
   <main></main>
 </body>
